a11y: Announce exclusive access bubble

This is roughly similar to patricialor@'s work in
https://codereview.chromium.org/2010493005/

Per offline conversation,this wasn't submitted
at the time due to some related bugs that are now fixed.

This works well in ChromeVox AFAICT. In VoiceOver,
testing on permission.site, pointer lock works well,
but fullscreen's announcement can sometimes be cut
off by VoiceOver returning to read the rest of the
page. Waiting until the animation is complete helps
a little but doesn't fully fix it, but I'm not sure
what else we could do.

Bug: 610583, 577011
Change-Id: Ic1ef5ba8f81d432eb1f64335be3f6bb6e4ff31f1
Reviewed-on: https://chromium-review.googlesource.com/1015554
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554476}
Former-commit-id: 9b735e2affd26b188a5f10668d6083d5946a1aa4